--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="h1">
         <p> <u> CENTRIFUGE </u> </p>
     </div>
-        <img src="Laminar.jpg" alt="" width="20px" height="230px"> 
+        <img src="Centri.jpg" alt="" width="20px" height="350px"> 
         
 
         
